--- a/draft2.css
+++ b/draft2.css
@@ -67,6 +67,19 @@ body {
 }
 
 /*
+    Change the color, thickness, etc. of the champion hover outlines, and the header outlines
+*/
+.pick-champ-outline {
+    outline: 2px solid rgb(236, 209, 59); /*default 2px solid rgb(236, 209, 59)*/
+}
+.header-select-outline {
+    outline: 2px solid rgb(236, 209, 59); /* default 2px solid rgb(236, 209, 59)*/
+}
+.header-default-outline {
+    outline: 2px solid black; /*default 2px solid black*/
+}
+
+/*
     Disabling the role icons 
 */
 .role-icon {
